# codesphere-python-example

./: .env.sample  .gitignore  Makefile  README.md  bitbucket-pipelines.yml  ci.Qa.yml  ci.dev.yml  ci.prod.yml  ci.yml  env
backend/: .gitignore  app.py  doc.py  pyproject.toml
backend/tests/: test_app.py
frontend/: main.py  pyproject.toml
frontend/tests/: test_main.py
