[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.3"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pytest-cov>=6.1.1",
    "pytest-profiling>=1.8.1",
    "requests>=2.32.4",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "."
] 
python_files = "test_*.py *_test.py"
python_functions = "test_*"
python_classes = "Test*"
filterwarnings = [
    "ignore::altair.utils.deprecation.AltairDeprecationWarning",
]

[tool.coverage.run]
source = ["api", "handler", "tasks"]  
branch = true       
omit = [
    "migrations/*",
    "models/*",
    "templates/*",
    "*/__main__.py",
    "tests/*",    
    ".venv/*",  
    "__init__.py"          
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover", 
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod", 
    "def __repr__",
    "def __str__",
]
include_namespace_packages = true

[tool.coverage.html]
directory = "test-results"

[tool.bandit]
targets = ["main.py"]
exclude_dirs = ["tests", ".venv", ".uv"]
skips = ["B101"]
